--- a/popup.html
+++ b/popup.html
@@ -639,7 +639,7 @@
 <body>
     <div class="flex gap-4">
         <div class="info-message">
-            <p class="main-message">To get your credentials, please visit <a href="https://freeneopass.vercel.app" target="_blank">freeneopass</a></p>
+            <p class="main-message">To get your credentials, please visit <a href="https://freeneopass.vercel.app" target="_blank">neopass</a></p>
         </div>
 
         <!-- Status Message - removed stealth indicator -->
@@ -875,3 +875,4 @@
     <script src="popup.js"></script>
 </body>
 </html>
+
