--- a/popup.html
+++ b/popup.html
@@ -705,10 +705,6 @@
                             </div>
                             <ul class="shortcuts-list">
                                 <li>
-                                    <span class="shortcut-key">Ctrl + Shift + Q</span>
-                                    <span class="shortcut-description">Answer Neo Questions with 100% Accuracy</span>
-                                </li>
-                                <li>
                                     <span class="shortcut-key">Ctrl + Shift + T</span>
                                     <span class="shortcut-description">Type Neo Coding Answers</span>
                                 </li>
@@ -771,8 +767,13 @@
                             </div>
                             <ul class="shortcuts-list">
                                 <li>
-                                    <span class="shortcut-key">Option + Shift + N</span>
-                                    <span class="shortcut-description">Solve NPTEL MCQs</span>
+                                    <div class="shortcut-item-with-requirement">
+                                        <div class="shortcut-main-line">
+                                            <span class="shortcut-key">Option + Shift + N</span>
+                                            <span class="shortcut-description">Solve NPTEL MCQs</span>
+                                        </div>
+                                        <span class="text-selection-required">SELECT QUESTION FIRST</span>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
@@ -875,4 +876,3 @@
     <script src="popup.js"></script>
 </body>
 </html>
-
